# defai-arena

./: .env.example  .gitignore  README.md  agent.py  chatbot.py  main.py  ohlcv.py  pyproject.toml
scripts/: copy.sh
